done reverting all lfs changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:6a153cae02ec02c9efe81f5d92c4ac82a25a5b457bcc1db66b033d865d9eb392
-size 367
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My finance chatbot</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html> Add comment
